--- a/wesite - assignment 1/index.css
+++ b/wesite - assignment 1/index.css
@@ -1,4 +1,5 @@
 .mandatory{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding-left: 20px;
+    padding-left: 20px ;
+    color: gray;
 }
